# EQ2EMu

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
DB/: currentlsdb.sql  (+1 more)
EQ2/source/LoginServer/: CMakeLists.txt  EQ2 Login.ncb  EQ2 Login.sdf  LWorld.cpp  LWorld.h  Login.vcxproj  Login.vcxproj.filters  LoginDatabase.cpp  LoginDatabase.h  PacketHeaders.cpp  PacketHeaders.h  UpgradeLog.XML  UpgradeLog2.XML  UpgradeLog3.XML  UpgradeLog4.XML  client.cpp  client.h  login_structs.h  makefile  net.cpp  net.h
EQ2/source/WorldServer/: CMakeLists.txt  ClientPacketFunctions.cpp  ClientPacketFunctions.h  Combat.cpp  Entity.cpp  Entity.h  Factions.cpp  GroundSpawn.cpp  GroundSpawn.h  Languages.cpp  LoginServer.cpp  LuaFunctions.cpp  LuaFunctions.h  LuaInterface.cpp  LuaInterface.h  NPC.cpp  NPC.h  NPC_AI.cpp  NPC_AI.h  Object.cpp  Player.cpp  Player.h  PlayerGroups.cpp  PlayerGroups.h  Quests.cpp  Quests.h  Sign.cpp  Skills.cpp  Skills.h  Spawn.cpp  Spawn.h  SpawnLists.h  SpellProcess.cpp  SpellProcess.h  Spells.cpp  Spells.h  Trade.cpp  Trade.h  Transmute.cpp  VisualStates.h  (+16 more)
EQ2/source/WorldServer/AltAdvancement/: AltAdvancement.cpp
EQ2/source/WorldServer/Bots/: Bot.cpp  Bot.h  BotBrain.cpp  BotCommands.cpp  BotDB.cpp
EQ2/source/WorldServer/Chat/: Chat.cpp  ChatChannel.cpp
EQ2/source/WorldServer/Commands/: Commands.cpp  Commands.h  ConsoleCommands.cpp
EQ2/source/WorldServer/Guilds/: Guild.cpp  GuildDB.cpp
EQ2/source/WorldServer/HeroicOp/: HeroicOp.cpp
EQ2/source/WorldServer/Housing/: HousingDB.cpp  HousingPackets.cpp
EQ2/source/WorldServer/Items/: Items.cpp  Items.h  ItemsDB.cpp  Items_CoE.h  Items_DoV.h  Loot.cpp  LootDB.cpp
(+17194 files in other folders)
